@@ -6,3 +6,6 @@
 
 	* Fix build with DSO.
 
+2011-03-19  Mike Blumenkrantz
+
+        * Fix crash in e-notify-send when invalid DBUS_SESSION_BUS_ADDRESS is specified
